--- a/_config.yaml
+++ b/_config.yaml
@@ -1,3 +1,3 @@
 domain: freelancers-union.github.io
 url: https://freelancers-union.github.io
-baseurl: https://freelancers-union.github.io/fugaming.org
+baseurl: /fugaming.org
