--- a/_config.yaml
+++ b/_config.yaml
@@ -1,1 +1,4 @@
-baseurl: /fugaming.org
+baseurl: "/fugaming.org"
+url: "https://freelancers-union.github.io"
+title: Freelancers Union
+description: "The serious community for the casual gamer"
