--- a/.github/workflows/fugaming-apply.yaml
+++ b/.github/workflows/fugaming-apply.yaml
@@ -19,7 +19,7 @@ jobs:
     uses: ./.github/workflows/terraform-plan.yaml
     with:
       tf_version: 1.3.9
-      working_directory: fugaming.org
+      working_directory: terraform
     secrets:
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -29,7 +29,7 @@ jobs:
     uses: ./.github/workflows/terraform-apply.yaml
     with:
       tf_version: 1.3.9
-      working_directory: fugaming.org
+      working_directory: terraform
       aws_region: eu-west-2
     secrets:
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
