--- a/.github/workflows/fugaming-ci.yaml
+++ b/.github/workflows/fugaming-ci.yaml
@@ -5,11 +5,11 @@ on:
   push:
     paths:
       - '.github/workflows/**'
-      - 'fugaming.org/**'
+      - 'terraform/**'
   workflow_dispatch:
   pull_request:
     paths:
-      - 'fugaming.org/**'
+      - 'terraform/**'
 
 jobs:
   # terraform-check:
@@ -22,7 +22,7 @@ jobs:
     uses: ./.github/workflows/terraform-plan.yaml
     with:
       tf_version: 1.3.9
-      working_directory: fugaming.org
+      working_directory: terraform
     secrets:
       aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
       aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
